--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
   "private": true,
   "dependencies": {
     "@cap-js-community/odata-v2-adapter": "^1.14.3",
+    "@cap-js/hana": "^1",
+    "@sap/approuter": "^20.3.1",
     "@sap/cds": "^8",
-    "express": "^4",
-    "@cap-js/hana": "^1"
+    "@sap/xssec": "^4",
+    "express": "^4"
   },
   "devDependencies": {
     "@cap-js/cds-types": "^0.9.0",
-    "@cap-js/sqlite": "^1"
+    "@cap-js/sqlite": "^1",
+    "@sap/cds-dk": "^8"
   },
   "scripts": {
     "start": "cds-serve",
@@ -25,6 +28,9 @@
   "cds": {
     "sql": {
       "native_hana_associations": false
+    },
+    "requires": {
+      "auth": "xsuaa"
     }
   }
 }
